Makefile.common: expanded documentation, moved to README.build.org

--- a/Makefile.common
+++ b/Makefile.common
@@ -1,112 +1,8 @@
 # -*- Makefile -*-
 
 # This is a common Makefile that can be used as the core buildsystem for
-# projects providing a library and some executables using this library. Simple example:
-#
-#
-#    PROJECT_NAME := gltk
-#    ABI_VERSION  := 0
-#    TAIL_VERSION := 1
-#
-#    LIB_SOURCES := Gltk_Fl_Window.cc gltk.c gltk_control.c gltk_plot.c gltk_test_cmdline.c
-#    BIN_SOURCES := gltk_test.cc
-#
-#    CCXXFLAGS += -Wno-unused-parameter -Wno-unused-variable -Wno-unused-but-set-variable
-#
-#    LDLIBS := -lfltk -lfltk_gl -lGL -lGLU -lglut
-#
-#    DIST_BIN_EXCEPT     := *_test
-#    DIST_INCLUDE_EXCEPT := *_test_*
-#
-#
-#    include /usr/include/mrbuild/Makefile.common
-#    -include *.d
-#
-
-# So we define some variables to set up our project, and the thing works. This
-# is a plain Makefile, so things that work in plain Makefiles work here. You can
-# define your own rules, dependencies and variables. Things like per-target
-# variables should work.
-#
-# Variables that MUST be defined:
-#
-#     PROJECT_NAME  The name of the project. Ends up in the SONAME. Libraries
-#                   may or may not be called lib..., but the "lib" will be
-#                   prepended to the SONAME if it's missing
-#
-#     ABI_VERSION   Required for libraries. An integer indicating the version of
-#                   the ABI. Usually the same as the major version number of the
-#                   project. Together with TAIL_VERSION, these define the
-#                   default VERSION ?= $(ABI_VERSION).$(TAIL_VERSION) which can
-#                   be used in the per-project Makefile
-#
-#     TAIL_VERSION  Required for libraries. An arbitrary string. Together with
-#                   TAIL_VERSION, these define the default
-#                       VERSION ?= $(ABI_VERSION).$(TAIL_VERSION)
-#                   which can be used in the per-project Makefile
-#
-#     VERSION       Required for non-libraries. A version string is always
-#                   passed as a #define to the compiler, to all documentation
-#                   generators (gengetopt and such). The project Makefile can
-#                   set this to whatever they like. If omitted, it defaults to
-#                   VERSION ?= $(ABI_VERSION).$(TAIL_VERSION)
-#
-# Variables that MAY be defined:
-#
-#     LIB_SOURCES   Sources to build into a library. May contain wildcards.
-#
-#     BIN_SOURCES   Sources to build into executables. By default each executable
-#                   will be built from the library and each source in
-#                   BIN_SOURCES. May contain wildcards..
-#
-#     CFLAGS	    Flags for C, C++, the preprocessor and both respectively. By
-#     CXXFLAGS	    default we pass -O3 and (for C++) -std=c++0x. If we specify
-#     CCXXFLAGS	    any other optimization level or standard, the defaults will
-#     CPPFLAGS      be omitted. To make commandline-based options work, touch
-#                   these with +=
-#
-#     LDFLAGS       Similar to the above. The linker flags
-#
-#     LDLIBS        Similar to the above. The libraries we link with. By default this
-#                   applies to all objects, libraries and executables we build
-#
-#     DIST_BIN      Executables that we distribute. May include wildcards. If omitted,
-#                   defaults to all the executables $(BIN_SOURCES) produce
-#
-#     DIST_INCLUDE  Headers that we distribute. May include wildcards.
-#
-#     DIST_BIN_EXCEPT      Simple distribution blacklists. May include wildcards. For
-#     DIST_INCLUDE_EXCEPT  anything fancier, use the ..._FINDSPEC variables described
-#                          below
-#
-#     DIST_DOC      Documentation we ship. May include wildcards.
-#
-#     DIST_MAN      Man-pages we ship. May include wildcards.
-#
-#     DIST_DATA     Arbitrary data we ship. May include wildcards.
-#
-#     DIST_BIN_EXCEPT_FINDSPEC
-#     DIST_INCLUDE_EXCEPT_FINDSPEC
-#     DIST_DOC_EXCEPT_FINDSPEC
-#     DIST_MAN_EXCEPT_FINDSPEC
-#     DIST_DATA_EXCEPT_FINDSPEC
-#                   After we install a set of files to the DESTDIR, we may want
-#                   to delete some subset of them. This is similar to the
-#                   _EXCEPT blacklists above, but accomplished with the 'find'
-#                   utility, so we have more flexibility. For instance, to
-#                   install all the manpages except onces for tests, do this:
-#
-#                     DIST_MAN                 := doxygen-doc/man/man3
-#                     DIST_MAN_EXCEPT_FINDSPEC := -type f -name '*_test.3'
-#
-#                   To install only the manpage for the frobnicator utility
-#                   (delete all others) we do this:
-#
-#                     DIST_MAN                 := doxygen-doc/man/man3
-#                     DIST_MAN_EXCEPT_FINDSPEC := -type f \! \( -name 'frobnicator.3' \)
-#
-#     EXTRA_CLEAN   Additional target to clean out during a 'make clean'
-
+# projects providing a library and some executables using this library. Please
+# see README.build.org for the documentation.
 
 
 # Make sure I have the variables that must be defined. Libraries need an ABI and
