--- a/Makefile.common
+++ b/Makefile.common
@@ -234,6 +234,10 @@ endif
 	$(call install_rule,DIST_PERL_MODULES,$(DESTDIR)/usr/share/perl5/vendor_perl,)
 	$(call install_rule,DIST_PY2_MODULES, $(DESTDIR)/usr/lib/python2.7/site-packages,)
 	$(call install_rule,DIST_PY3_MODULES, $(DESTDIR)/usr/lib/python3.4/site-packages,)
+
+        # In filenames I rename __colon__ -> :
+        # This is required because Make can't deal with : in rules
+	for fil in `find $(DESTDIR) -name '*__colon__*'`; do mv $$fil `echo $$fil | sed s/__colon__/:/g`; done
 .PHONY: install
 
 
