cmdline variables are disallows only for 'make xxxFLAGS=yyy'
There are two ways to pass variables to make:

make CFLAGS=-foo
  and
CFLAGS=-foo make

The former creates a "command line" variable and the latter an
"environment variable". In order to be able to modify a "command line"
variable (to add other flags, say), one MUST use 'override'. So one would have to do

override CFLAGS += -bar

without the "override" nothing would happen. I want to avoid this rabbithole
entirely, so I disallow "command line" variables for things that I modify.

I only do this for xxxFLAGS becuase cross-building and installing in Debian
uses Make in this way. Hopefully this is safe enough

--- a/Makefile.common
+++ b/Makefile.common
@@ -17,10 +17,12 @@
 #
 # override CFLAGS += -bar
 #
-# without the "override" nothing would happen. I want to avoid this
-# rabbithole entirely, so I disallow "command line" variables for things
-# that I modify. Environment variables are OK, though
-$(foreach v,$(.VARIABLES),$(if $(filter command line,$(origin $v)), $(error '$v' not allowed as a make parameter. Please do "$v=xxxx make yyyy" instead of "make yyyy $v=xxxx")))
+# without the "override" nothing would happen. I want to avoid this rabbithole
+# entirely, so I disallow "command line" variables for things that I modify.
+#
+# I only do this for xxxFLAGS becuase cross-building and installing in Debian
+# uses Make in this way. Hopefully this is safe enough
+$(foreach v,$(filter %FLAGS,$(.VARIABLES)),$(if $(filter command line,$(origin $v)), $(error '$v' not allowed as a make parameter. Please do "$v=xxxx make yyyy" instead of "make yyyy $v=xxxx")))
 
 
 
