--- a/Makefile.common
+++ b/Makefile.common
@@ -80,7 +80,8 @@ SOURCE_DIRS := $(sort ./ $(dir $(LIB_SOURCES) $(BIN_SOURCES)))
 # if the PROJECT_NAME is xxx    then LIB_NAME is libxxx
 LIB_NAME           := $(or $(filter lib%,$(PROJECT_NAME)),lib$(PROJECT_NAME))
 LIB_TARGET_SO_BARE := $(LIB_NAME).so
-LIB_TARGET_SO	   := $(LIB_TARGET_SO_BARE).$(ABI_VERSION).$(TAIL_VERSION)
+LIB_TARGET_SO_ABI  := $(LIB_TARGET_SO_BARE).$(ABI_VERSION)
+LIB_TARGET_SO_FULL := $(LIB_TARGET_SO_ABI).$(TAIL_VERSION)
 
 BIN_TARGETS := $(basename $(BIN_SOURCES))
 
@@ -157,22 +158,22 @@ moc_%.cpp: %.hh
 
 # by default I build shared libraries only. We known how to build static
 # libraries too, but I don't do it unless asked
-all: $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO)) $(if $(strip $(BIN_SOURCES)),$(BIN_TARGETS))
+all: $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO_FULL)) $(if $(strip $(BIN_SOURCES)),$(BIN_TARGETS))
 .PHONY: all
 .DEFAULT_GOAL := all
 
 
 
-$(LIB_TARGET_SO): LDFLAGS += -shared -Wl,--default-symver -fPIC -Wl,-soname,$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
+$(LIB_TARGET_SO_FULL): LDFLAGS += -shared -Wl,--default-symver -fPIC -Wl,-soname,$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
 
 
 # Here instead of specifying $^, I do just the %.o parts and then the
 # others. This is required to make the linker happy to see the dependent
 # objects first and the dependency objects last. Same as for BIN_TARGETS
-$(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_BARE).$(ABI_VERSION): $(LIB_TARGET_SO)
-	ln -fs $(notdir $(LIB_TARGET_SO)) $@
+$(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_ABI): $(LIB_TARGET_SO_FULL)
+	ln -fs $(notdir $(LIB_TARGET_SO_FULL)) $@
 
-$(LIB_TARGET_SO): $(LIB_OBJECTS)
+$(LIB_TARGET_SO_FULL): $(LIB_OBJECTS)
 	$(CC_LINKER) $(LDFLAGS) $(filter %.o, $^) $(filter-out %.o, $^) $(LDLIBS) -o $@
 
 # I make sure to give the .o to the linker before the .so and everything else.
@@ -182,7 +183,7 @@ $(BIN_TARGETS): %: %.o
 	$(CC_LINKER) -Wl,-rpath=$(abspath .) $(LDFLAGS) $(filter %.o, $^) $(filter-out %.o, $^) $(LDLIBS) -o $@
 
 # The binaries link with the DSO, if there is one
-$(BIN_TARGETS): $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO))
+$(BIN_TARGETS): $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO_FULL))
 
 
 
@@ -234,7 +235,7 @@ $(if $(strip $($1)),
 endef
 
 ifneq ($(strip $(LIB_SOURCES)),)
-install: $(LIB_TARGET_SO) $(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_BARE).$(ABI_VERSION)
+install: $(LIB_TARGET_SO_FULL) $(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_ABI)
 endif
 
 install: $(BIN_TARGETS) $(DIST_DOC) $(DIST_MAN) $(DIST_DATA)
@@ -242,9 +243,9 @@ install: $(BIN_TARGETS) $(DIST_DOC) $(DIST_MAN) $(DIST_DATA)
 # using 'cp -P' instead of 'install' because the latter follows links unconditionally
 ifneq ($(strip $(LIB_SOURCES)),)
 	mkdir -p $(DESTDIR)/$(USRLIB)
-	cp -P $(LIB_TARGET_SO)  $(DESTDIR)/$(USRLIB)
-	ln -fs $(notdir $(LIB_TARGET_SO)) $(DESTDIR)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
-	ln -fs $(notdir $(LIB_TARGET_SO)) $(DESTDIR)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_BARE))
+	cp -P $(LIB_TARGET_SO_FULL)  $(DESTDIR)/$(USRLIB)
+	ln -fs $(notdir $(LIB_TARGET_SO_FULL)) $(DESTDIR)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
+	ln -fs $(notdir $(LIB_TARGET_SO_FULL)) $(DESTDIR)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_BARE))
 endif
 	$(call install_rule,DIST_BIN,         $(DESTDIR)/usr/bin,chmod 0755 $(DESTDIR)/usr/bin/* && ( chrpath -d $(DESTDIR)/usr/bin/* 2>/dev/null || true ))
 	$(call install_rule,DIST_INCLUDE,     $(DESTDIR)/usr/include/$(PROJECT_NAME),)
