--- a/Makefile.common
+++ b/Makefile.common
@@ -158,7 +158,7 @@ moc_%.cpp: %.hh
 
 # by default I build shared libraries only. We known how to build static
 # libraries too, but I don't do it unless asked
-all: $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO_FULL)) $(if $(strip $(BIN_SOURCES)),$(BIN_TARGETS))
+all: $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO_FULL) $(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_ABI)) $(if $(strip $(BIN_SOURCES)),$(BIN_TARGETS))
 .PHONY: all
 .DEFAULT_GOAL := all
 
