--- a/Makefile.common
+++ b/Makefile.common
@@ -341,7 +341,7 @@ endif
 	$(call install_rule,DIST_DOC,         $(DESTDIR)/usr/share/doc/$(PROJECT_NAME),)
 	$(call install_rule,DIST_MAN,         $(DESTDIR)/usr/share/man,)
 	$(call install_rule,DIST_DATA,        $(DESTDIR)/usr/share/$(PROJECT_NAME),)
-	$(call install_rule,DIST_PERL_MODULES,$(DESTDIR)/usr/share/perl5/vendor_perl,)
+	$(call install_rule,DIST_PERL_MODULES,$(DESTDIR)/usr/share/perl5,)
 	$(call install_rule,DIST_PY2_MODULES, $(DESTDIR)/usr/lib/python2.7/site-packages,)
 	$(call install_rule,DIST_PY3_MODULES, $(DESTDIR)/usr/lib/python3.4/site-packages,)
 
