--- a/Makefile.common
+++ b/Makefile.common
@@ -363,9 +363,9 @@ endif
         # exists to let these run in-tree, but needs to be removed at
         # install-time (similar to an RPATH)
 ifneq ($(strip $(DIST_BIN)),)
-	for fil in `find $(DESTDIR)/usr/bin -type f`; do head -n1 $$fil | grep -q '^#!.*/perl$$' && perl -n -i -e 'print unless /^\s* use \s+ lib \b/x' $$fil; done
+	for fil in `find $(DESTDIR)/usr/bin -type f`; do head -n1 $$fil | grep -q '^#!.*/perl$$' && perl -n -i -e 'print unless /^\s* use \s+ lib \b/x' $$fil || true; done
 endif
-	find $(DESTDIR)/usr/share/perl5 -type f | xargs perl -n -i -e 'print unless /^\s* use \s+ lib \b/x'
+	test -e $(DESTDIR)/usr/share/perl5 && find $(DESTDIR)/usr/share/perl5 -type f | xargs perl -n -i -e 'print unless /^\s* use \s+ lib \b/x' || true
 
 ifneq ($(strip $(DIST_BIN)),)
         # Everything executable needs specific permission bits
