--- a/Makefile.common
+++ b/Makefile.common
@@ -266,9 +266,10 @@ $(LIB_TARGET_SO_FULL): $(LIB_OBJECTS)
 
 # I make sure to give the .o to the linker before the .so and everything else.
 # The .o may depend on the other stuff. The binaries get an rpath (removed at
-# install time)
+# install time). Here $^ contains two flavors of LIB_TARGET (see next stanza),
+# so I manually remove one
 $(BIN_TARGETS): %: %.o
-	$(CC_LINKER) -Wl,-rpath=$(abspath .) $(LDFLAGS) $(filter %.o, $^) $(filter-out %.o, $^) $(LDLIBS) -o $@
+	$(CC_LINKER) -Wl,-rpath=$(abspath .) $(LDFLAGS) $(filter %.o, $^) $(filter-out $(LIB_TARGET_SO_ABI),$(filter-out %.o, $^)) $(LDLIBS) -o $@
 
 # The binaries link with the DSO, if there is one. I need the libxxx.so to build
 # the binary, and I need the libxxx.so.abi to run it.
