--- a/Makefile.common
+++ b/Makefile.common
@@ -157,6 +157,7 @@ moc_%.cpp: %.hh
 
 
 
+PYTHON_VERSION_FOR_EXTENSIONS := 2 # 2 or 3
 # Flags for python extension modules. See
 # http://notes.secretsauce.net/notes/2017/11/14_python-extension-modules-without-setuptools-or-distutils.html
 #
@@ -216,7 +217,7 @@ endef
 # I eval this to actually invoke the Python and to ingest its results. I only
 # eval this ONLY when necessary
 define query_python_extension_building_flags
-_PYVARS := $$(shell python -c '$$(_PYVARS_SCRIPT)')
+_PYVARS := $$(shell python$(PYTHON_VERSION_FOR_EXTENSIONS) -c '$$(_PYVARS_SCRIPT)')
 # I then $$(eval) these tokens one at a time, restoring the whitespace
 $$(foreach v,$$(_PYVARS),$$(eval $$(subst __whitespace__, ,$$v)))
 # pull out flags from CC, throw out the compiler itself, since I know better
