--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -93,12 +93,12 @@ _PYVARS := $$(shell python$(PYTHON_VERSION_FOR_EXTENSIONS) -c '$$(_PYVARS_SCRIPT
 # I then $(eval) these tokens one at a time, restoring the whitespace
 $$(foreach setvarcmd,$$(_PYVARS),$$(eval $$(subst __whitespace__, ,$$(setvarcmd))))
 # pull out flags from CC, throw out the compiler itself, since I know better
-_FLAGS_FROM_PYCC    := $$(wordlist 2,$$(words $$(PY_CC)),$$(PY_CC))
-_PY_MRBUILD_CFLAGS  := $$(filter-out -O%,$$(_FLAGS_FROM_PYCC) $$(PY_CFLAGS) $$(PY_CCSHARED) -I$$(PY_INCLUDEPY))
+_FLAGS_FROM_PYCC    := $$(wordlist 2,$$(words $$(_PY_CC)),$$(_PY_CC))
+_PY_MRBUILD_CFLAGS  := $$(filter-out -O%,$$(_FLAGS_FROM_PYCC) $$(_PY_CFLAGS) $$(_PY_CCSHARED) -I$$(_PY_INCLUDEPY))
 # I add an RPATH to the python extension DSO so that it runs in-tree. Will pull
 # it out at install time
-_PY_MRBUILD_LDFLAGS := $$(PY_LDFLAGS) -L$$(abspath .) -Wl,-rpath=$$(abspath .)
-_PY_MRBUILD_LINKER  := $$(PY_BLDSHARED) $$(PY_BLDLIBRARY)
+_PY_MRBUILD_LDFLAGS := $$(_PY_LDFLAGS) -L$$(abspath .) -Wl,-rpath=$$(abspath .)
+_PY_MRBUILD_LINKER  := $$(_PY_BLDSHARED) $$(_PY_BLDLIBRARY)
 endef
 
 # List of variables a user Makefile could touch
