--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -123,3 +123,14 @@ endef
 
 $(foreach v,$(filter-out PY_EXT_SUFFIX,$(_PYVARS_API)),$(eval $(call _PY_DEFINE_API_VAR,$v)))
 $(eval $(call _PY_DEFINE_API_VAR_EXTSUFFIX,PY_EXT_SUFFIX))
+
+
+
+# Useful to pull in a local build of some library. Sets the compiler and linker
+# (runtime and build-time) flags. Invoke like this:
+#   $(eval $(call add_local_library_path,/home/user/library))
+define add_local_library_path
+CFLAGS   += -I$1
+CXXFLAGS += -I$1
+LDFLAGS += -L$1 -Wl,-rpath=$1
+endef
