--- a/Makefile.common.footer
+++ b/Makefile.common.footer
@@ -271,13 +271,11 @@ MANDIR := usr/share/man
 # Generates the install rules. Arguments:
 #   1. variable containing the being installed
 #   2. target path they're being installed to
-#   3. post-install commands
 define install_rule
 $(if $(strip $($1)),
 	mkdir -p $2 &&									\
 	cp -r $($1) $2 &&								\
-	$(if $($(1)_EXCEPT_FINDSPEC),find $2 $($(1)_EXCEPT_FINDSPEC) -delete &&)	\
-	$(or $3,true) )
+	$(if $($(1)_EXCEPT_FINDSPEC),find $2 $($(1)_EXCEPT_FINDSPEC) -delete ) )
 endef
 
 # Redhat wants the various manpage section get their own subdir for some reason
@@ -301,23 +299,23 @@ ifneq ($(strip $(LIB_SOURCES)),)
 	ln -fs $(notdir $(LIB_TARGET_SO_FULL)) $(DESTDIR)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_ABI))
 	ln -fs $(notdir $(LIB_TARGET_SO_FULL)) $(DESTDIR)/$(USRLIB)/$(notdir $(LIB_TARGET_SO_BARE))
 endif
-	$(call install_rule,DIST_BIN,         $(DESTDIR)/usr/bin,)
-	$(call install_rule,DIST_INCLUDE,     $(DESTDIR)/usr/include/$(PROJECT_NAME),)
-	$(call install_rule,DIST_DOC,         $(DESTDIR)/usr/share/doc/$(PROJECT_NAME),)
+	$(call install_rule,DIST_BIN,         $(DESTDIR)/usr/bin)
+	$(call install_rule,DIST_INCLUDE,     $(DESTDIR)/usr/include/$(PROJECT_NAME))
+	$(call install_rule,DIST_DOC,         $(DESTDIR)/usr/share/doc/$(PROJECT_NAME))
 
 # I install the manpages normally. On Redhat I need to shuffle them into
 # different subdirectories. This is incomplete: sections that aren't simply
 # digits 1-9 will not be moved. "3perl" is an example I can think of that won't
 # work here. Good-enough for now
-	$(call install_rule,DIST_MAN,         $(DESTDIR)/$(MANDIR),)
+	$(call install_rule,DIST_MAN,         $(DESTDIR)/$(MANDIR))
 ifeq (,$(USE_DEBIAN_PATHS))
 	$(foreach s,1 2 3 4 5 6 7 8 9,$(call move_manpages_for_redhat,$s) && ) true
 endif
 
-	$(call install_rule,DIST_DATA,        $(DESTDIR)/usr/share/$(PROJECT_NAME),)
-	$(call install_rule,DIST_PERL_MODULES,$(DESTDIR)/usr/share/perl5,)
-	$(call install_rule,DIST_PY2_MODULES, $(DESTDIR)/usr/lib/python2.7/site-packages,)
-	$(call install_rule,DIST_PY3_MODULES, $(DESTDIR)/usr/lib/python3.6/site-packages,)
+	$(call install_rule,DIST_DATA,        $(DESTDIR)/usr/share/$(PROJECT_NAME))
+	$(call install_rule,DIST_PERL_MODULES,$(DESTDIR)/usr/share/perl5)
+	$(call install_rule,DIST_PY2_MODULES, $(DESTDIR)/usr/lib/python2.7/site-packages)
+	$(call install_rule,DIST_PY3_MODULES, $(DESTDIR)/usr/lib/python3.6/site-packages)
 
         # In filenames I rename __colon__ -> :
         # This is required because Make can't deal with : in rules
