--- a/Makefile.common.footer
+++ b/Makefile.common.footer
@@ -240,6 +240,16 @@ ifneq (,$(filter install,$(MAKECMDGOALS)))
 What are you trying to do?)
   endif
 
+ifneq (,$(strip $(DIST_PY2_MODULES)))
+PY2_MODULE_PATH := $(shell python2 -c 'import site; print("\n".join(site.getsitepackages()))' | egrep -v '/local/|/python[23]/' | head -n1 | sed 's/dist-/site-/')
+$(if $(PY2_MODULE_PATH),,$(error "Couldn't find the python2 module path!"))
+endif
+
+ifneq (,$(strip $(DIST_PY3_MODULES)))
+PY3_MODULE_PATH := $(shell python3 -c 'import site; print("\n".join(site.getsitepackages()))' | egrep -v '/local/|/python[23]/' | head -n1 | sed 's/dist-/site-/')
+$(if $(PY3_MODULE_PATH),,$(error "Couldn't find the python3 module path!"))
+endif
+
 USE_DEBIAN_PATHS := $(wildcard /etc/debian_version)
 ifneq (,$(USE_DEBIAN_PATHS))
   # we're a debian-ish box, use the multiarch dir
@@ -314,8 +324,8 @@ endif
 
 	$(call install_rule,DIST_DATA,        $(DESTDIR)/usr/share/$(PROJECT_NAME))
 	$(call install_rule,DIST_PERL_MODULES,$(DESTDIR)/usr/share/perl5)
-	$(call install_rule,DIST_PY2_MODULES, $(DESTDIR)/usr/lib/python2.7/site-packages)
-	$(call install_rule,DIST_PY3_MODULES, $(DESTDIR)/usr/lib/python3.6/site-packages)
+	$(call install_rule,DIST_PY2_MODULES, $(DESTDIR)/$(PY2_MODULE_PATH))
+	$(call install_rule,DIST_PY3_MODULES, $(DESTDIR)/$(PY3_MODULE_PATH))
 
         # In filenames I rename __colon__ -> :
         # This is required because Make can't deal with : in rules
