--- a/Makefile.common.footer
+++ b/Makefile.common.footer
@@ -241,12 +241,12 @@ What are you trying to do?)
   endif
 
 ifneq (,$(strip $(DIST_PY2_MODULES)))
-PY2_MODULE_PATH := $(shell python2 -c 'import site; print("\n".join(site.getsitepackages()))' | egrep -v '/local/|/python[23]/' | head -n1 | sed 's/dist-/site-/')
+PY2_MODULE_PATH := $(shell python2  -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())" | sed 's/dist-/site-/')
 $(if $(PY2_MODULE_PATH),,$(error "Couldn't find the python2 module path!"))
 endif
 
 ifneq (,$(strip $(DIST_PY3_MODULES)))
-PY3_MODULE_PATH := $(shell python3 -c 'import site; print("\n".join(site.getsitepackages()))' | egrep -v '/local/|/python[23]/' | head -n1 | sed 's/dist-/site-/')
+PY3_MODULE_PATH := $(shell python3  -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())" | sed 's/dist-/site-/')
 $(if $(PY3_MODULE_PATH),,$(error "Couldn't find the python3 module path!"))
 endif
 
